objects/Community_Tab__c.object
<CustomObject>
    <fields>
        <fullName>Community__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Community</label>
        <referenceTo>Community__c</referenceTo>
        <relationshipLabel>Community Tabs</relationshipLabel>
        <relationshipName>Community_Tabs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <label>ExternalId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Community Tab</label>
    <nameField>
        <label>Community Tab Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Community Tabs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>DTH_Community</fullName>
        <columns>NAME</columns>
        <columns>Community__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Community__c</field>
            <operation>equals</operation>
            <value>DTH</value>
        </filters>
        <label>DTH Community</label>
        <language>en_US</language>
    </listViews>
</CustomObject>